--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Fichas RPG</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+  <script src="firebase-config.js"></script>
+</head>
+<body>
+  <h1>Minhas Fichas</h1>
+  <button id="login-btn">Entrar com Google</button>
+  <button id="logout-btn" style="display:none;">Sair</button>
+
+  <div id="fichas-area" style="display:none;">
+    <form id="form-ficha">
+      <input name="nome" placeholder="Nome do personagem" required><br>
+      <input name="classe" placeholder="Classe"><br>
+      <input name="forca" type="number" placeholder="Força"><br>
+      <button type="submit">Salvar Ficha</button>
+    </form>
+
+    <h2>Suas Fichas</h2>
+    <ul id="lista-fichas"></ul>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
