--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 
     <h2>Suas Fichas</h2>
     <ul id="lista-fichas"></ul>
+<div id="editar-ficha-modal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; padding:2rem; border:1px solid #ccc; z-index:1000;">
+  <h2>Editar Ficha</h2>
+  <form id="editar-ficha-form">
+    <input name="nome" placeholder="Nome do personagem" required><br>
+    <input name="classe" placeholder="Classe"><br>
+    <input name="forca" type="number" placeholder="Força"><br>
+    <button type="submit">Salvar Alterações</button>
+    <button type="button" onclick="document.getElementById('editar-ficha-modal').style.display='none'">Cancelar</button>
+  </form>
+</div>
   </div>
 
   <script src="script.js"></script>
